Refactor trash button and add books photos on checkout
