# api/src/ShoppingCart/Query/Cart/Domain/Product.php
@@ -7,6 +7,7 @@ final readonly class Product
     public function __construct(
         public string $productId,
         public string $title,
+        public string $photo,
         public int $unitPrice,
         public int $quantity,
         public int $totalPrice
@@ -18,6 +19,7 @@ final readonly class Product
         return [
             'productId' => $this->productId,
             'title' => $this->title,
+            'photo' => $this->photo,
             'unitPrice' => $this->unitPrice,
             'quantity' => $this->quantity,
             'totalPrice' => $this->totalPrice,
